# django_template

./: .gitignore  Pipfile  format.sh  manage.py  pre_commit.sh  pyproject.toml  readme.md
ZRT/: settings.py  urls.py  wsgi.py
app/: manage.py
app/authentication/: views.py
app/authentication/schema/: request.py
app/common_schema/: __init__.py
app/conf/: settings.py  urls.py
app/ecode/: basic.py
app/utils/: __init__.py  auth.py  common.py  tests.py
authentication/: views.py
ecode/: __init__.py  basic.py
utils/: __init__.py  common.py  middleware.py  mixin.py  tests.py
